<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawlay2"
    tools:context=".MainActivity">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            app:title="@string/title"
            app:titleTextColor="@color/white"
            android:background="@color/design_default_color_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_below="@id/toolbar2"
            android:orientation="vertical"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/bname"
                android:textColor="@color/design_default_color_primary"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etbname"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/aname"
                android:textColor="@color/design_default_color_primary"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etaname"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <TextView
                android:text="@string/genre"
                android:textColor="@color/design_default_color_primary"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/spngenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rdogrpfic"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rdofic"
                    android:checked="true"
                    android:text="@string/fiction"
                    android:textColor="@color/design_default_color_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/rdonfic"
                    android:text="@string/nfiction"
                    android:textColor="@color/design_default_color_primary"
                    android:layout_marginLeft="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

            <TextView
                android:text="@string/launch"
                android:textColor="@color/design_default_color_primary"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btndate"
                android:text="@string/date"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/agegrp"
                android:textColor="@color/design_default_color_primary"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/chkage1"
                android:text="@string/agegrp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/chkage2"
                android:text="@string/agegrp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/chkage3"
                android:text="@string/agegrp3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/chkage4"
                android:text="@string/agegrp4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnadd"
                android:text="@string/add"
                android:textColor="@color/white"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navview2"
        app:menu="@menu/book_action"
        app:headerLayout="@layout/nav_header"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>